--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "esModuleInterop": true,
     "removeComments": false,
     "jsx": "preserve",
-    "lib": ["ES2018", "DOM"],
+    "lib": ["es2020", "DOM"],
     "types": ["jest", "jscodeshift", "node"],
     "rootDir": "."
   },
